Update About me

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <h2>About</h2>
       <div class="card">
         <p>I’m a software engineer turned ecosystem builder, working at the intersection of <strong>technology and social impact</strong>. As <strong>Program Coordinator of the Technical Resource Lab (TRL) at Ateneo</strong>, I co-lead efforts to advance <strong>Digital Public Infrastructure (DPI)</strong>—reimagining identity, payments, and data exchage systems so they serve the public in more inclusive and accessible ways.</p>
-        <p>I also serve as <strong>Director of Operations at Python Philippines (PythonPH)</strong> and am a <strong>Python Software Foundation Fellow</strong>, where I’ve spent years nurturing grassroots leadership and building sustainable, volunteer-driven systems.</p>
+        <p>I also serve as <strong>Director of Operations at Python Philippines (PythonPH)</strong>, where I’ve spent years nurturing grassroots leadership and building sustainable, volunteer-driven systems.</p>
         <p>At my core, I use my Python background and open source values to <strong>catalyze change—bridging technology, community, and impact. I like to defy the odds for the things I truly care about:</strong></p>
         <ul>
           <li>Open Source</li>
@@ -225,7 +225,7 @@
             <div class="step">
               <div class="circle">1</div>
               <p class="title">Software Engineer</p>
-              <p class="meta">(Web &amp; Backend)</p>
+              <p class="meta">Web &amp; Backend</p>
             </div>
             <div class="line"></div>
             <div class="step">
