Update landing page

--- a/index.html
+++ b/index.html
@@ -323,15 +323,12 @@
     <section id="about">
       <h2>About</h2>
       <div class="card">
-        <p>I’m a software engineer turned ecosystem builder, working at the intersection of <strong>technology and social impact</strong>. As <strong>Program Coordinator of Ateneo TRL (Technical Resource Lab)</strong>, I co-lead efforts to advance <strong>Digital Public Infrastructure (DPI)</strong>—reimagining identity, payments, and data exchage systems so they serve the public in more inclusive and accessible ways.</p>
-        <p>I also serve as <strong>Director of Operations at Python Philippines (PythonPH)</strong>, where I’ve spent years nurturing grassroots leadership and building sustainable, volunteer-driven systems.</p>
-        <p>At my core, I use my Python background and open source values to <strong>catalyze change—bridging technology, community, and impact. I like to defy the odds for the things I truly care about:</strong></p>
-        <ul>
-          <li>Open Source</li>
-          <li>Women in Tech</li>
-          <li>Economic empowerment through skills and access</li>
-          <li>Building technology that puts people first</li>
-        </ul>
+        <p>I build systems that make technology and tools truly serve people. I help ideas move from intent to impact, even when starting in ambiguity, with limited resources and ambitious outcomes.</p>
+        <p>I’m a software engineer turned ecosystem builder, working at the intersection of technology and social impact. My work spans open source, education, and govtech — helping ideas move from vision to something that actually works.</p>
+        <p>As <strong>Program Coordinator of Ateneo TRL (Technical Resource Lab)</strong>, I help shape efforts around digital public infrastructure (DPI) in the Philippines, from identity and payments to data exchange, making these systems more inclusive and interoperable.</p>
+        <p>As <strong>Director of Operations at Python Philippines (PythonPH)</strong>, I focus on building sustainable, volunteer-driven programs and financial models that keep community work alive. Figuring out sponsorships, partnerships, and funding strategy has become one of the ways I help open-source communities stay independent and resilient.</p>
+        <p><strong>Python</strong> has been at the center of my journey — not just as a programming language, but as a community I’ve chosen to serve. That commitment keeps me asking: <strong><i>What do I need to become to serve the people I've chosen to serve?</i></strong></p>
+        <p>At my core, I use my Python background and open source values to catalyze change—by bridging technology, community, and impact. I care deeply about open source, women in tech, and economic empowerment through skills and access — and I like to defy the odds for the things I truly care about</strong></p>
 
         <div class="career-journey">
           <h3 style="margin:20px 0 12px 0; font-family:'Poppins',sans-serif;">Career Journey</h3>
