--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       <h2>About</h2>
       <div class="card">
         <p><strong>I build systems that make technology and tools truly serve people</strong>. I help ideas move from intent to impact, even when starting in ambiguity, with limited resources and ambitious outcomes.</p>
-        <p>I’m a software engineer turned ecosystem builder, working at the intersection of technology and social impact. My work spans open source, education, and govtech — translating vision into systems that actually work.</p>
+        <p>I’m a software engineer turned ecosystem builder, working at the intersection of technology and social impact. My work spans open source, education, and govtech — translating vision into systems work and last.</p>
         <p>As <strong>Program Coordinator of Ateneo TRL (Technical Resource Lab)</strong>, I help shape efforts around <strong>digital public infrastructure (DPI)</strong> in the Philippines, helping make systems more inclusive and interoperable.</p>
         <p>As <strong>Director of Operations at Python Philippines (PythonPH)</strong>, I build sustainable, volunteer-driven programs and financial models that keep community work alive and independent.</p>
         <p><strong>Python</strong> has been at the center of my journey — not just as a programming language, but as a community I’ve chosen to serve. Guided by open-source values, I care deeply about women in tech, economic empowerment through skills and access.</p>
