Update About Me

--- a/index.html
+++ b/index.html
@@ -324,11 +324,10 @@
       <h2>About</h2>
       <div class="card">
         <p><strong>I build systems that make technology and tools truly serve people</strong>. I help ideas move from intent to impact, even when starting in ambiguity, with limited resources and ambitious outcomes.</p>
-        <p>I’m a software engineer turned ecosystem builder, working at the intersection of technology and social impact. My work spans open source, education, and govtech.</p>
-        <p>As <strong>Program Coordinator of Ateneo TRL (Technical Resource Lab)</strong>, I help shape efforts around <strong>digital public infrastructure (DPI)</strong> in the Philippines, from identity and payments to data exchange, making these systems more inclusive.</p>
+        <p>I’m a software engineer turned ecosystem builder, working at the intersection of technology and social impact. My work spans open source, education, and govtech — translating vision into systems that actually work.</p>
+        <p>As <strong>Program Coordinator of Ateneo TRL (Technical Resource Lab)</strong>, I help shape efforts around <strong>digital public infrastructure (DPI)</strong> in the Philippines, helping make systems more inclusive and interoperable.</p>
         <p>As <strong>Director of Operations at Python Philippines (PythonPH)</strong>, I build sustainable, volunteer-driven programs and financial models that keep community work alive and independent.</p>
-        <p><strong>Python</strong> has been at the center of my journey — not just as a programming language, but as a community I’ve chosen to serve. That commitment keeps me asking what I need to become to serve better.</p>
-        <p>At my core, I use my Python background and open-source values to bridge technology, community, and impact. I care deeply about open source, women in tech, and economic empowerment through skills and access, and <strong>I like to defy the odds for the things I truly care about.</strong></p>
+        <p><strong>Python</strong> has been at the center of my journey — not just as a programming language, but as a community I’ve chosen to serve. Guided by open-source values, I care deeply about women in tech, economic empowerment through skills and access.</p>
 
         <div class="career-journey">
           <h3 style="margin:20px 0 12px 0; font-family:'Poppins',sans-serif;">Career Journey</h3>
