Update About Me

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <section id="about">
       <h2>About</h2>
       <div class="card">
-        <p><strong>I’m known for bridging technology, community, and impact</strong>, even when starting from ambiguity, limited resources, and ambitious goals, to build sustainable systems that make technology truly serve people.</p>
+        <p><strong>I build systems that make technology and tools truly serve people. I help ideas move from intent to impact, even when starting through ambiguity, limited resources, and ambitious outcomes.</p>
         <p>I’m a software engineer turned ecosystem builder, working at the intersection of technology and social impact. My work spans open source, education, and govtech.</p>
         <p>As <strong>Program Coordinator of Ateneo TRL (Technical Resource Lab)</strong>, I help shape efforts around <strong>digital public infrastructure (DPI)</strong>, building open, people-centered systems that make government services more inclusive and accessible.</p>
         <p>As <strong>Director of Operations at Python Philippines (PythonPH)</strong>, I build sustainable, volunteer-driven programs and financial models that keep community work alive and independent.</p>
