Update profile photo

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   </header>
 
   <div class="container hero">
-<!--         <img class="profile-pic" src="mickey-profile.jpg" alt="Micaela Reyes Profile Picture"> -->
+        <img class="profile-pic" src="mickey-laptop-cement.jpg" alt="Micaela Reyes Profile Picture">
     <h1>Micaela Reyes</h1>
     <div class="motto">Code. Passion. Freedom. Making a Difference.</div>
     <p class="roles">Open Source Community Builder · Software Engineer · Director of Operations at PythonPH · PSF Fellow</p>
