Update About Me

--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@
       <h2>About</h2>
       <div class="card">
         <p><strong>I build systems that align tools and technology with human needs.</strong> I help ideas move from intent to impact, working through uncertainty and limited resources to reach ambitious goals.</p>
-        <p>I’m a software engineer turned ecosystem builder, working at the intersection of technology, education and social impact. My work spans open source, education, and govtech.</p>
+        <p>I’m a software engineer turned ecosystem builder, working at the intersection of technology, education and social impact. </p>
         <p>As <strong>Program Coordinator of Ateneo TRL (Technical Resource Lab)</strong>, I help shape efforts around <strong>digital public infrastructure (DPI)</strong>, building open, people-centered systems that make government services more inclusive and accessible.</p>
         <p>As <strong>Director of Operations at Python Philippines (PythonPH)</strong>, I build sustainable, volunteer-driven programs and financial models that keep community work alive and independent.</p>
-        <p><strong>Python</strong> has been at the center of my journey — not just as a programming language, but as a community I’ve chosen to serve. Guided by open-source values, I care deeply about women in tech, and economic empowerment through skills and access.</p>
+        <p><strong>Python</strong> has been at the center of my journey — not just as a programming language, but as a community I’ve chosen to serve. Guided by open source values, I care deeply about women in tech, and economic empowerment through skills and access.</p>
 
         <div class="career-journey">
           <h3 style="margin:20px 0 12px 0; font-family:'Poppins',sans-serif;">Career Journey</h3>
