Update list of talks

--- a/index.html
+++ b/index.html
@@ -419,8 +419,10 @@
   <script>
     // Data
     const featuredTalks = [
+      { title: 'Scaling & Systematizing Grassroots Leadership: Lessons from PythonPH & PyLadies Manila', event: 'PyLadiesCon 2025', videoId: 'TI1NRWf3Xt0', slides: '#'},
       { title: '(PythonPH) One Does Not Simply Create a Lasting Tech Community', event: 'PyCon TW 2023', videoId: 'FFmIaazm__I', slides: '#'},
-      { title: 'Panel Discussion: Challenges for Women Working in Technology - Panel Discussion ', event: 'PyLadiesCon 2024', videoId: '8YRFPvOOStU', slides: '#'}
+      { title: 'Panel Discussion: Challenges for Women Working in Technology - Panel Discussion', event: 'PyLadiesCon 2024', videoId: '8YRFPvOOStU', slides: '#'},
+      { title: 'A Magic Carpet Ride to Python', event: 'WitCon 2021', videoId: '_Gw84iIgNCQ', slides: '#'}
     ];
 
     const accomplishments = [
