Update profile and header title

--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@
   </header>
 
   <div class="container hero">
-        <img class="profile-pic" src="mickey-laptop-cement.jpg" alt="Micaela Reyes Profile Picture">
+        <img class="profile-pic" src="mickey-profile-cement-bg.png" alt="Micaela Reyes Profile Picture">
     <h1>Micaela Reyes</h1>
     <div class="motto">Code. Passion. Freedom. Making a Difference.</div>
-    <p class="roles">Open Source Community Builder · Software Engineer · Director of Operations at PythonPH · PSF Fellow</p>
+    <p class="roles">Technical Program Manager · Open Source Ecosystem Builder · Operations Director at PythonPH · PSF Fellow</p>
     <div class="quicklinks">
       <a class="chip" href="https://blog.codemickeycode.com/">Blog</a>
       <a class="chip" href="https://github.com/codemickeycode">GitHub</a>
